[package]
name = "simulation_runner_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "start_experiment"
path = "src/main.rs"

[[bin]]
name = "tcp_input_server_stateful"
path = "src/tcp_input_server_stateful.rs"

[[bin]]
name = "tcp_input_server_stateless"
path = "src/tcp_input_server_stateless.rs"

[[bin]]
name = "precalculate_reconnects"
path = "src/precalculate_reconnects.rs"

[[bin]]
name = "get_random_number_range"
path = "src/get_random_number_range.rs"

[[bin]]
name = "retry_experiments"
path = "src/retry_experiments.rs"

[[bin]]
name = "test_toml"
path = "src/test_toml.rs"

[[bin]]
name = "simulated_reconnects_to_mobile_configs"
path = "src/simulataed_reconnects_to_mobile_configs.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4.0", features = ["termination"] }
futures = "0.3.28"
reqwest = { version = "0.11.18", features = ["json", "blocking", "native-tls-vendored"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
text_io = "0.1.12"
yaml-rust = "0.4.5"
nes_tools = {path = "../nes_tools"}
csv = "1.3.0"
toml = "0.8.8"
chrono = "0.4.32"
serde_with = { version = "3.5.1", features = ["chrono_0_4"] }
tokio = "1.28.2"
rand = "0.8.5"
regex = "1.10.3"
relative-path = { version = "1.9.2", features = ["serde"] }
execute = "0.2.13"
itertools = "0.13.0"
plotly = "0.9.0"
avro-rs = "0.13.0"
byteorder = "1.5.0"
#plotters = "0.3.6"
